dataset1235/2025-2/2868285114/users/221116065/executions/3649835072_3902794658.log
== SUBMISSION (2025-08-23 20:53:35)
-- CODE: 
nome = input("Insira seu nome: ")
idade = int(input("Insira sua idade: "))
altura = float(input("Insira sua altura: "))

print("Nome: ", nome)
print("Idade: ", idade)
print("Altura: ", altura)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
Altura:  1.45
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
Altura:  1.79
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
Altura:  1.68
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
Altura:  1.89
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 20:53:23)
-- CODE: 
nome = input("Insira seu nome: ")
idade = int(input("Insira sua idade: "))
altura = float(input("Insira sua altura: "))

print("Nome: ", nome)
print("Idade: ", idade)
print("Altura: ", altura)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
Altura:  1.45
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
Altura:  1.79
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
Altura:  1.68
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
Altura:  1.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 20:53:04)
-- CODE: 
nome = input("Insira seu nome: ")
idade = int(input("Insira sua idade: "))
altura = float(input("Insira sua altura: "))

Print("Nome: ", nome)
print("Idade: ", idade)
print("Altura: ", altura)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Print("Nome: ", nome)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Print("Nome: ", nome)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Print("Nome: ", nome)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Print("Nome: ", nome)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 20:51:41)
-- CODE: 
nome = input("Insira seu nome: ")
idade = int(input("Insira sua idade: "))
altura = float(input("Insira sua altura: "))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
Insira seu nome: Insira sua idade: Insira sua altura:
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
Insira seu nome: Insira sua idade: Insira sua altura:
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
Insira seu nome: Insira sua idade: Insira sua altura:
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
Insira seu nome: Insira sua idade: Insira sua altura:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 20:52:56)
-- CODE: 
nome = input("Insira seu nome: ")
idade = int(input("Insira sua idade: "))
altura = float(input("Insira sua altura: "))

Print("Nome: ", nome)
print("Idade: ", idade)
print("Altura: ", 1.68)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Print("Nome: ", nome)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Print("Nome: ", nome)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Print("Nome: ", nome)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Print("Nome: ", nome)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
